packages/cyberstorm/src/newComponents/Toast/Toast.css
@layer components {
  .toast {
    position: relative;
    display: flex;

    gap: var(--toast-gap);
    align-items: flex-start;
    align-self: stretch;

    border-left: 3px solid var(--toast-border-color);
    border-radius: var(--toast-border-radius);
    background-color: var(--toast-background-color);
    padding-block: var(--toast-padding-block);
    padding-inline: var(--toast-padding-inline);
    cursor: grab;
  }

  .toast:active {
    cursor: grabbing;
  }

  .toast__icon {
    width: var(--toast-icon-width);
    height: var(--toast-icon-height);

    --icon-color: var(--toast-icon-color);
  }

  .toast__close {
    position: absolute;
    top: 0.5rem;
    right: 0.5rem;
    width: var(--toast-close-width);
    height: var(--toast-close-height);
    background: transparent;
  }

  .toast__close-icon {
    width: var(--toast-close-icon-width);
    height: var(--toast-close-icon-height);

    --icon-color: var(--toast-close-icon-color);
  }

  .toast__close-icon:hover {
    --icon-color: var(--toast-close-icon-color-hover);
  }

  .toast__content {
    min-width: 0;
    color: var(--toast-color);
    font-weight: var(--toast-font-weight);
    font-size: var(--toast-font-size);
    line-height: var(--toast-line-height);
  }

  .toast__viewport {
    --viewport-padding: 1.5rem;

    position: fixed;
    bottom: 0;
    left: 0;
    z-index: 2147483647;
    display: flex;
    flex-direction: column;
    gap: 0.625rem;
    width: 390px;
    max-width: 100vw;
    margin: 0;
    padding: var(--viewport-padding);
    list-style: none;
    outline: none;

    --radix-toast-swipe-end-x: -1.5rem;
  }

  .toast[data-state="open"] {
    animation: slide-in 600ms cubic-bezier(0.16, 1, 0.3, 1);
  }

  .toast[data-state="closed"] {
    animation: hide 200ms ease-in;
  }

  .toast[data-swipe="move"] {
    transform: translateX(var(--radix-toast-swipe-move-x));
  }

  .toast[data-swipe="cancel"] {
    transform: translateX(0);
    transition: transform 200ms ease-out;
  }

  .toast[data-swipe="end"] {
    animation: swipe-out 600ms ease-out;
  }

  @keyframes hide {
    from {
      opacity: 1;
    }

    to {
      opacity: 0;
    }
  }

  @keyframes slide-in {
    from {
      transform: translateX(calc(-100% - var(--viewport-padding)));
    }

    to {
      transform: translateX(0);
    }
  }

  @keyframes swipe-out {
    from {
      transform: translateX(var(--radix-toast-swipe-end-x));
    }

    to {
      transform: translateX(calc(-100% - var(--viewport-padding)));
    }
  }
}

